--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "local": "node ./node_modules/cross-env/dist/bin/cross-env NODE_ENV=local-generic node app.js",
-    "local-debug": "node ./node_modules/cross-env/dist/bin/cross-env NODE_ENV=local-debug node app.js",
+    "local-generic": "cross-env NODE_ENV=local-generic node app.js",
+    "local-debug": "cross-env NODE_ENV=local-debug node app.js",
     "test": "swagger project test",
     "lint": "eslint api handlers mock persist sequelize test app.js --quiet",
     "sequelize": "node ./node_modules/.bin/sequelize"
@@ -25,28 +25,29 @@
     "node": ">=8.9.1"
   },
   "dependencies": {
-    "axios": "0.17.1",
-    "bluebird": "3.5.1",
-    "config": "1.29.2",
+    "axios": "0.21.0",
+    "bluebird": "3.7.2",
+    "config": "3.3.3",
     "continuation-local-storage": "3.2.1",
-    "cors": "2.8.4",
-    "cross-env": "5.1.3",
-    "express": "4.16.2",
-    "helmet": "3.10.0",
-    "http-auth": "3.2.3",
-    "js-yaml": "3.10.0",
-    "json-refs": "3.0.3",
-    "jsonwebtoken": "8.1.1",
-    "morgan": "1.9.0",
-    "mysql2": "1.5.1",
+    "cors": "2.8.5",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "express": "4.17.1",
+    "helmet": "4.2.0",
+    "http-auth": "4.1.2",
+    "js-yaml": "3.14.0",
+    "json-refs": "3.0.15",
+    "jsonwebtoken": "8.5.1",
+    "morgan": "1.10.0",
+    "mysql2": "2.2.5",
     "secure-route": "3.0.1",
-    "sequelize": "4.32.1",
-    "sequelize-cli": "3.2.0",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0",
     "swagger-express-mw": "0.7.0",
-    "swagger-ui-express": "2.0.14",
-    "winston": "2.4.0"
+    "swagger-ui-express": "4.1.5",
+    "winston": "3.3.3"
   },
   "devDependencies": {
-    "eslint": "4.16.0"
+    "eslint": "7.14.0"
   }
 }
