--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "4.17.1",
     "helmet": "4.2.0",
     "http-auth": "4.1.2",
+    "http-auth-connect": "^1.0.4",
     "js-yaml": "3.14.0",
     "json-refs": "3.0.15",
     "jsonwebtoken": "8.5.1",
